updating project images

--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -39,7 +39,7 @@
           <h1 class="project-title">The Temptation</h1>
           <p class="project-description">
             The Temptation is a character design concept of an 80’s retelling of
-            the myth of Pandora’s box
+            the myth of Pandora’s box | Completed
           </p>
         </div>
         <ul class="project-navigation">
@@ -58,74 +58,74 @@
       <main class="project-details">
         <div class="project-image">
           <img
-            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_1_80s_pandoras_box_retelling.jpg"
+            src="assets/TT/sophiaspanosmcgill_thetemptation_titlepage_01.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="The Temptation project title"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_2_story.jpg"
+            src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_story_02.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="The Temptation story description"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_3_characterlineup.jpg"
+            src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_characters_lineup_03.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="The Tempation character designs"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_4_80s_pandora_character_design.jpg"
+            src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_character_pandora_04.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="The Temptation Pandora character design"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_5_80s_epimetheus_character_design.jpg"
+            src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_character_epimetheus_05.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="The Temptation Epimetheus character design"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_6_80s_boombox_character_design.jpg"
+            src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_character_boombox_06.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="The Temptation Boombox character design"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_7_80s_pandora_expression_sheet.jpg"
+            src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_pose_exploration_07.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="The Temptation Pandora pose exploration"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_8_80s_pandora_pose_sheet.jpg"
+            src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_expression_sheet_08.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="The Temptation Pandora expression exploration"
           />
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_9_80s_pandora_render_sheet.jpg"
+            src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_pandora_render_09.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="The Temptation Pandora character render"
           />
         </div>
       </main>
