--- a/p2regulusrex.html
+++ b/p2regulusrex.html
@@ -38,7 +38,7 @@
           <p class="project-description">
             Regulus Rex is a worldbuilding exercise and story concept that fuses
             medieval aesthetics with the local freshwater turtle species of
-            North America
+            North America | Completed
           </p>
         </div>
 
@@ -58,7 +58,55 @@
       <main class="project-details">
         <div class="project-image">
           <img
-            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_01_heroimage.jpg"
+            src="assets/RR/sophiaspanosmcgill_regulusrex_medieval_turtle_concept_hero_illustration_01.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_story_02.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_regulus_character_design_03.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_regulus_character_heropose_04.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_empress_character_design_05.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_supporting_character_design_06.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_weapon_design_07.jpg"
             width="1920"
             height="1080"
             alt="A description of the image"
