--- a/p4prophecyofthephoenix.html
+++ b/p4prophecyofthephoenix.html
@@ -37,7 +37,8 @@
           <h1 class="project-title">Prophecy of the Phoenix</h1>
           <p class="project-description">
             Prophecy of the Phoenix is a story concept that revolves around a
-            Phoenix goddess and combines steampunk and ancient Roman visuals
+            Phoenix goddess and combines steampunk and ancient Roman visuals |
+            Completed
           </p>
         </div>
 
