adjusting the about

--- a/about.html
+++ b/about.html
@@ -1,73 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Sophia Spanos McGill | About Page</title>
+    <meta
+      name="description"
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+    />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/d300c2ea15.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
 
-<head>
-  <title>Sophia Spanos McGill | About Page</title>
-  <meta name="description"
-    content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <script src="https://kit.fontawesome.com/d300c2ea15.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./styles/style.css">
-</head>
-
-<body class="about-page">
-  <header class="hero-header">
-    <ul class="branding-navigation">
-      <li><a href="work.html" class="custom-navigation">Work</a></li>
-      <li class="logo"><a href="index.html"><img src="assets/branding-images/SophLogo2024.svg" /></a></li>
-      <li><a href="about.html" class="custom-navigation">About</a></li>
-    </ul>
-  </header>
-  <ul class="about">
-    <li class="about-item-1">
-      <div class="about-image"><img src="assets/branding-images/_ (1).jpeg" width="800" height="800" alt="Your Photo">
-      </div>
-    </li>
-    <li class="about-item-2">
-      <h2>Hey!</h2>
-      <br>
-      <p>I’m Sophia Spanos McGill, a Vancouver-based illustrator and animator.
-        I recently graduated from the IDEA program at Capilano University with a Bachelor of Visual Communication.
-        <br>
-        <br>
-        My jam is visually developing story-driven projects.  Classes in character and creature design, worldbuilding, and digital painting have given me the confidence to create worlds you can clearly imagine.  My side creative hustles have been learning animation and motion design. 
-
-    </li>
-    <li class="about-item-3">
-      <p>
-        Like many illustrators I’m an obsessive creator, starting with dragons designs, pokemon cards and lego as a kid.My current personal projects currently include digital doodles, animated pieces, and an embarrassing amount of fan art. I balance too much screen time with almost daily doses of muay thai and jiu-jitsu.
-       <br>
-       <br>
-        If you have a project that may benefit from my skills and obsessions, I’d love to chat about how I might contribute. You can reach me here!
-        </p>
-      <ul class="socials-list">
-        <li class="social-item">
-          <a href="https://instagram.com/sophspanart/" target="_blank"
-            >Insta</a
-          >
+  <body class="about-page">
+    <header class="hero-header">
+      <ul class="branding-navigation">
+        <li><a href="work.html" class="custom-navigation">Work</a></li>
+        <li class="logo">
+          <a href="index.html"
+            ><img src="assets/branding-images/SophLogo2024.svg"
+          /></a>
         </li>
-        <li class="social-item">
-          <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
-            >LinkedIn</a
-          >
-        </li>
-        <li class="social-item">
-          <a href="mailto:pandorus2000@gmail.com" target="_blank"
-            >Email</a
-          >
-        </li>
+        <li><a href="about.html" class="custom-navigation">About</a></li>
       </ul>
-    </li>
-    <li class="footer-item-4">
-      <p class="fineprint">
-        Copyright 2024-2025 Sophia Spanos McGill. All rights reserved.
-      </p>
-    </li>
-  </ul>
-  </ul>
- 
-</body>
+    </header>
+    <ul class="about">
+      <li class="about-item-1">
+        <div class="about-image">
+          <img
+            src="assets/branding-images/_ (1).jpeg"
+            width="800"
+            height="800"
+            alt="Your Photo"
+          />
+        </div>
+      </li>
+      <li class="about-item-2">
+        <h2>Hey!</h2>
+        <br />
+        <p>
+          I’m Sophia Spanos McGill, a Vancouver-based illustrator and animator.
+          I recently graduated from the IDEA program at Capilano University with
+          a Bachelor of Visual Communication.
+          <br />
+          <br />
+          My jam is visually developing story-driven projects. Classes in
+          character and creature design, worldbuilding, and digital painting
+          have given me the confidence to create worlds you can clearly imagine.
+          My side creative hustles have been learning animation and motion
+          design.
+          <br />
+          <br />
+          Like many illustrators I’m an obsessive creator, starting with dragons
+          designs, pokemon cards and lego as a kid.My current personal projects
+          currently include digital doodles, animated pieces, and an
+          embarrassing amount of fan art. I balance too much screen time with
+          almost daily doses of muay thai and jiu-jitsu.
+        </p>
 
+        <p>
+          If you have a project that may benefit from my skills and obsessions,
+          I’d love to chat about how I might contribute. You can reach me here!
+        </p>
+        <ul class="socials-list">
+          <li class="social-item">
+            <a href="https://instagram.com/sophspanart/" target="_blank"
+              >Insta</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
+              >LinkedIn</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="mailto:pandorus2000@gmail.com" target="_blank">Email</a>
+          </li>
+          </ul>
+          <li class="footer-item-4">
+            <p class="fineprint">
+              Copyright 2024-2025 Sophia Spanos McGill. All rights reserved.
+            </p>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </body>
 </html>
