--- a/p2regulusrex.html
+++ b/p2regulusrex.html
@@ -61,7 +61,7 @@
             src="assets/RR/sophiaspanosmcgill_regulusrex_medieval_turtle_concept_hero_illustration_01.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Regulus Rex project title page"
           />
         </div>
         <div class="project-image">
@@ -69,7 +69,7 @@
             src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_story_02.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Regulus Rex story"
           />
         </div>
         <div class="project-image">
@@ -77,7 +77,7 @@
             src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_regulus_character_design_03.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Regulus Rex Medieval turtle king design"
           />
         </div>
         <div class="project-image">
@@ -85,7 +85,7 @@
             src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_regulus_character_heropose_04.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Regulus Rex Medieval turtle king hero pose"
           />
         </div>
         <div class="project-image">
@@ -93,7 +93,7 @@
             src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_empress_character_design_05.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Regulus Rex Medieval sea turtle antagonist design"
           />
         </div>
         <div class="project-image">
@@ -101,7 +101,7 @@
             src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_supporting_character_design_06.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Regulus Rex Medieval supporting turtle character designs"
           />
         </div>
         <div class="project-image">
@@ -109,7 +109,7 @@
             src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_weapon_design_07.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Regulus Rex Medieval freshwater weapon design"
           />
         </div>
       </main>
