--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -22,7 +22,7 @@
   <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html" class="custom-navigation">Work</a></li>
+        <li><a href="work.html" class="custom-navigation">WORK</a></li>
         <li class="logo">
           <a href="index.html"
             ><img
@@ -30,7 +30,7 @@
               alt="Describe your image"
           /></a>
         </li>
-        <li><a href="about.html" class="custom-navigation">About</a></li>
+        <li><a href="about.html" class="custom-navigation">ABOUT</a></li>
       </ul>
     </header>
     <div class="project-wrapper">
