--- a/p2regulusrex.html
+++ b/p2regulusrex.html
@@ -22,13 +22,13 @@
   <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html" class="custom-navigation">Work</a></li>
+        <li><a href="work.html" class="custom-navigation">WORK</a></li>
         <li class="logo">
           <a href="index.html"
             ><img src="assets/branding-images/SophLogo2024.svg"
           /></a>
         </li>
-        <li><a href="about.html" class="custom-navigation">About</a></li>
+        <li><a href="about.html" class="custom-navigation">ABOUT</a></li>
       </ul>
     </header>
     <div class="project-wrapper">
