we're getting there!

--- a/404.html
+++ b/404.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Free Creative Portfolio Template: Mar 2024 Version | Work Page
-    </title>
+    <title>Sophia Spanos McGill | 404 page</title>
     <meta
-      name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      name="The 404 page"
+      content="The 404 page for Sophia Spanos McGill's website"
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,10 +34,10 @@
         </ul>
       </header>
       <div class="hero-headline-wrapper">
-        <h1 class="error-page-title">Uh oh...</h1>
-        <h2>It would seem that you've gotten a little lost!</h2>
+        <h1 class="error-page-title">Yikes.</h1>
+        <h2>That's awkward...</h2>
         <p>
-          <a href="work.html">Click here to get back on the right path</a>
+          <a href="work.html">Click here and I'll pretend I didn't see that.</a>
         </p>
       </div>
       <footer class="hero-footer">
