--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Sophia Spanos McGill | Holding Page</title>
     <meta
-      name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      name="Sophia Spanos McGill Holding Page"
+      content="The Holding page before Sophia Spanos McGill's website"
     />
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="5; url=work.html" />
