--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <a href="work.html">
         <h1 class="holding-page-title">SOPHIA IS LOADING...</h1>
       </a>
+      <h3>She'll be right with ya!</h3>
     </div>
     <div class="holding-page-footer">
       <p class="holding-page-copyright">
