--- a/work.html
+++ b/work.html
@@ -66,13 +66,11 @@
                 width="1920"
                 height="1080"
                 alt="Sophia Spanos McGill | The Temptation Character Design"
+                href="p1pthetemptation-1.html"
               />
             </figure>
             <a href="p1pthetemptation-1.html">
-              <div class="overlay">
-                <h1 class="overlay-title">The Temptation</h1>
-                <h4 class="overlay-description">Character Design</h4>
-              </div>
+              
             </a>
           </li>
           <li class="work-page-grid-item">
