wrapping it up now!

--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
           <li class="logo">
             <a href="index.html">
               <img
-                src="assets/branding-images/SophLogo2024.svg"
+                src="assets/branding-images/SophLogo2024White.svg"
                 alt="Sophia Spanos McGill Logo"
               />
             </a>
@@ -60,21 +60,21 @@
           <h2 class="work-title">MY WORK</h2>
           <li class="work-page-grid-item">
             <figure class="image-work-page">
-              <img
+              <a href="p1pthetemptation-1.html"><img
                 src="assets/TT/sophiaspanosmcgill_thetemptation_story_80s_retelling_pandoras_box_pandora_render_09.jpg"
                 class="image-animation"
                 width="1920"
                 height="1080"
                 alt="Sophia Spanos McGill | The Temptation Character Design"
-                href="p1pthetemptation-1.html"
               />
+            </a>
             </figure>
             <a href="p1pthetemptation-1.html">
-              
             </a>
           </li>
           <li class="work-page-grid-item">
             <figure class="image-work-page">
+              <a href="p2regulusrex.html">
               <img
                 src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_weapon_design_07.jpg"
                 class="image-animation"
@@ -82,16 +82,14 @@
                 height="1080"
                 alt="Sophia Spanos McGill | Regulus Rex Character Design"
               />
+            </a>
             </figure>
             <a href="p2regulusrex.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Regulus Rex</h1>
-                <h4 class="overlay-description">Character & Prop Design</h4>
-              </div>
             </a>
           </li>
           <li class="work-page-grid-item">
             <figure class="image-work-page">
+              <a href="p3handlebars.html">
               <img
                 src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_013_establishingvisual.jpg"
                 class="image-animation"
@@ -99,18 +97,16 @@
                 height="1080"
                 alt="Sophia Spanos McGill | Handlebars Concept Design"
               />
+            </a>
             </figure>
             <a href="p3handlebars.html">
               <div class="overlay">
-                <h1 class="overlay-title">Handlebars</h1>
-                <h4 class="overlay-description">
-                  Character Design, Prop Design &amp; Storyboards
-                </h4>
               </div>
             </a>
           </li>
           <li class="work-page-grid-item">
             <figure class="image-work-page">
+              <a href="p4prophecyofthephoenix.html">
               <img
                 src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_art_08.jpg.jpg"
                 class="image-animation"
@@ -118,14 +114,9 @@
                 height="1080"
                 alt="Sophia Spanos McGill | Prophecy of the Phoenix Worldbuilding Concept"
               />
+            </a>
             </figure>
             <a href="p4prophecyofthephoenix.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Prophecy of the Phoenix</h1>
-                <h4 class="overlay-description">
-                  Character Design &amp; World Building
-                </h4>
-              </div>
             </a>
           </li>
         </ul>
