favicon logo and hero finalized

--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link
       rel="icon"
-      href="assets/branding-images/BlueSophFavicon.svg"
+      href="assets/branding-images/SophsFavicon.svg"
       type="image/svg+xml"
     />
   </head>
@@ -51,7 +51,9 @@
         <h3>THE ART OF</h3>
         <h1 class=>SOPHIA SPANOS MCGILL</h1>
       </div>
-  
+  <section class="hero-footer">
+    <br>
+  </section>
     </section>
 
     <main class="work-wrapper">
