--- a/p3handlebars.html
+++ b/p3handlebars.html
@@ -60,7 +60,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-01.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars bike illustration hero image"
           />
         </div>
         <div class="project-image">
@@ -68,7 +68,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-pitch-02.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars coming of age story pitch"
           />
         </div>
         <div class="project-image">
@@ -76,7 +76,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-characters-013.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars character introduction"
           />
         </div>
         <div class="project-image">
@@ -84,7 +84,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-sam-character-design-04.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars main character design"
           />
         </div>
         <div class="project-image">
@@ -92,7 +92,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-nora-character-design-05.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars main character turnaround"
           />
         </div>
         <div class="project-image">
@@ -100,7 +100,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-nora-character-design-06.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars secondary character design"
           />
         </div>
         <div class="project-image">
@@ -108,7 +108,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-nora-character-turnaround-07.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars secondary character turnaround"
           />
         </div>
         <div class="project-image">
@@ -116,7 +116,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-object-design-08.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars object design page"
           />
         </div>
         <div class="project-image">
@@ -124,7 +124,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-shed-location-design-09.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars shed location design"
           />
         </div>
         <div class="project-image">
@@ -132,7 +132,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-town-location-design-10.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars small town design illustration"
           />
         </div>
         <div class="project-image">
@@ -140,7 +140,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-house-location-design-11.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars town house designs"
           />
         </div>
         <div class="project-image">
@@ -148,7 +148,7 @@
             src="assets/HNDB/sophia-spanos-mcgill-handlebars-queer-coming-of-age-bike-story-concept-establishing-visual-12.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Handlebars two girls building a bike"
           />
         </div>
       </main>
