--- a/p4prophecyofthephoenix.html
+++ b/p4prophecyofthephoenix.html
@@ -61,7 +61,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_heroillustration_01.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | hero illustration"
           />
         </div>
         <div class="project-image">
@@ -69,7 +69,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_story_02.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | story concept"
           />
         </div>
         <div class="project-image">
@@ -77,7 +77,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_art_08.jpg.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | roman steampunk city concept"
           />
         </div>
         <div class="project-image">
@@ -85,7 +85,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_development_thumbnail_09.jpg.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | roman steampunk city visual development"
           />
         </div>
         <div class="project-image">
@@ -93,7 +93,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_colour_10.jpg.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | roman steampunk city color development"
           />
         </div>
         <div class="project-image">
@@ -101,7 +101,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_characters_03.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | character introduction "
           />
         </div>
         <div class="project-image">
@@ -109,7 +109,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_priest_character_concept_art_04.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | the priest character design"
           />
         </div>
         <div class="project-image">
@@ -117,7 +117,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_pigeoneer_character_concept_art_05.jpg.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | the pigeoneer character design"
           />
         </div>
         <div class="project-image">
@@ -125,7 +125,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_paladin_character_concept_art_06.jpg.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | the paladin character design"
           />
         </div>
         <div class="project-image">
@@ -133,7 +133,7 @@
             src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_character_concept_art_07.jpg.jpg"
             width="1920"
             height="1080"
-            alt="A description of the image"
+            alt="Prophecy of the Phoenix | the phoenix character design"
           />
         </div>
       </main>
