--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -27,7 +27,7 @@
           <a href="index.html"
             ><img
               src="assets/branding-images/SophLogo2024White.svg"
-              alt="Describe your image"
+              alt="Sophia Spanos McGill logo"
           /></a>
         </li>
         <li><a href="about.html" class="custom-navigation">ABOUT</a></li>
