--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      Sophia Spanos McGill | Home Page
+      Sophia Spanos McGill | Illustration and Concept Art
     </title>
     <meta
       name="Sophia Spanos McGill | Illustration and Concept Art"
