--- a/p3handlebars.html
+++ b/p3handlebars.html
@@ -3,8 +3,8 @@
   <head>
     <title>Sophia Spanos McGill | Handlebars</title>
     <meta
-      name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      name="Handlebars | story concept"
+      content="Handlebars is a coming of age story concept"
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
