--- a/404.html
+++ b/404.html
@@ -18,6 +18,11 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="icon"
+      href="assets/branding-images/SophsFavicon.svg"
+      type="image/svg+xml"
+    />
   </head>
 
   <body class="error-page">
