--- a/about.html
+++ b/about.html
@@ -17,6 +17,11 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="icon"
+      href="assets/branding-images/SophsFavicon.svg"
+      type="image/svg+xml"
+    />
   </head>
 
   <body class="about-page">
