--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="icon"
+      href="assets/branding-images/SophsFavicon.svg"
+      type="image/svg+xml"
+    />
   </head>
 
   <body class="holding-page">
