--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -17,6 +17,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="icon"
+      href="assets/branding-images/SophsFavicon.svg"
+      type="image/svg+xml"
+    />
   </head>
 
   <body class="project-1">
