adding home button on project and about page, work button on home page takes you to first project

--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
       <header class="hero-header">
         <ul class="branding-navigation">
           <li>
-            <a href="work.html" class="custom-navigation">WORK</a>
+            <a href="p1pthetemptation-1.html" class="custom-navigation">WORK</a>
           </li>
           <li class="logo">
             <a href="index.html">
