--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -27,7 +27,7 @@
   <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html" class="custom-navigation">WORK</a></li>
+        <li><a href="work.html" class="custom-navigation">HOME</a></li>
         <li class="logo">
           <a href="index.html"
             ><img
