--- a/p3handlebars.html
+++ b/p3handlebars.html
@@ -27,7 +27,7 @@
   <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html" class="custom-navigation">WORK</a></li>
+        <li><a href="work.html" class="custom-navigation">HOME</a></li>
         <li class="logo">
           <a href="index.html"
             ><img src="assets/branding-images/SophLogo2024White.svg"
