--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   <body class="about-page">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html" class="custom-navigation">WORK</a></li>
+        <li><a href="work.html" class="custom-navigation">HOME</a></li>
         <li class="logo">
           <a href="index.html"
             ><img src="assets/branding-images/SophLogo2024.svg"
