--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         </div>
       </li>
       <li class="about-item-2">
-        <h2>Hey!</h2>
+        <h2>Hiya!</h2>
         <br />
         <p>
           I’m Sophia Spanos McGill, a Vancouver-based illustrator and animator.
