--- a/p4prophecyofthephoenix.html
+++ b/p4prophecyofthephoenix.html
@@ -3,8 +3,8 @@
   <head>
     <title>Sophia Spanos McGill | The Prophecy Of The Phoenix</title>
     <meta
-      name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      name="Sophia Spanos McGill | The Prophecy Of The Phoenix"
+      content="Dive into an illustrated fantasy world inspired by steampunk designs and roman architecture, with avian flourishes."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
