--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <title>Sophia Spanos McGill | About Page</title>
     <meta
-      name="description"
+      name="Sophia Spanos McGill | About Page"
       content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
     />
     <meta charset="utf-8" />
