--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 
   <body class="holding-page">
     <div class="holding-page-wrapper">
+      <ul>
+        <li class="logo">
+          <a
+            img
+            src="assets/branding-images/Sophia_AnimLogo.svg"
+            alt="Sophia animated logo"
+          >
+          </a>
+        </li>
+      </ul>
       <h1 class="holding-page-title">SOPHIA IS LOADING...</h1>
     </div>
     <div class="holding-page-footer">
