wrapping up metadata

--- a/404.html
+++ b/404.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <title>Sophia Spanos McGill | 404 page</title>
-    <meta
-      name="The 404 page"
-      content="The 404 page for Sophia Spanos McGill's website"
-    />
+    <meta name="The 404 page" content="Error" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="screenshot.jpg" />
