--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <title>Sophia Spanos McGill | About Page</title>
     <meta
       name="Sophia Spanos McGill | About Page"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="Learn more about aspiring illustrator, concept artist and animator Sophia Spanos McGill, from her inspirations to her current work."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
