--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Sophia Spanos McGill | Holding Page</title>
     <meta
       name="Sophia Spanos McGill Holding Page"
-      content="The holding page before Sophia Spanos McGill's website"
+      content="Don’t wait up! Jump straight into Sophia Spanos McGill’s illustrated world! "
     />
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="5; url=work.html" />
