--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -4,7 +4,7 @@
     <title>Sophia Spanos McGill | The Temptation</title>
     <meta
       name="Sophia Spanos McGill | The Temptation"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="What if the myth of Pandora’s Box were an 80’s slasher-inspired animation? Take a look at the character designs for this conceptual remix in The Temptation. "
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
