--- a/p3handlebars.html
+++ b/p3handlebars.html
@@ -3,8 +3,8 @@
   <head>
     <title>Sophia Spanos McGill | Handlebars</title>
     <meta
-      name="Handlebars | story concept"
-      content="Handlebars is a coming of age story concept"
+      name="Sophia Spanos McGill | Handlebars"
+      content="Discover the concept art for Handlebars, a queer coming-of-age story set in an endless summer—from character designs and turnarounds to worldbuilding."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
