--- a/p4prophecyofthephoenix.html
+++ b/p4prophecyofthephoenix.html
@@ -4,7 +4,7 @@
     <title>Sophia Spanos McGill | The Prophecy Of The Phoenix</title>
     <meta
       name="Sophia Spanos McGill | The Prophecy Of The Phoenix"
-      content="Dive into an illustrated fantasy world inspired by steampunk designs and roman architecture, with avian flourishes."
+      content="Dive into the illustrated universe of Prophecy of the Phoenix, with designs inspired by steampunk aesthetics and Roman architecture with avian flourishes. "
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
