--- a/p2regulusrex.html
+++ b/p2regulusrex.html
@@ -4,7 +4,7 @@
     <title>Sophia Spanos McGill | Regulus Rex</title>
     <meta
       name="Sophia Spanos McGill | Regulus Rex"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="Enter Regulus Rex, the visual development for an underwater medieval turtle kingdom with character and weapon designs. "
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
