i broke my index grrr

--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
     <div class="holding-page-wrapper">
       <ul>
         <li class="logo">
-          <a
-            img
-            src="assets/branding-images/Sophia_AnimLogo.svg"
-            alt="Sophia animated logo"
-          >
-          </a>
+          <img src="assets/branding-images/Sophia_AnimLogo.svg" />
         </li>
       </ul>
       <h1 class="holding-page-title">SOPHIA IS LOADING...</h1>
