updates nearly done

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
   <body class="holding-page">
     <div class="holding-page-wrapper">
+      &nbsp;
       <ul>
-        <li class="logo">
+        <li class="animatedlogo">
           <img src="assets/branding-images/Sophia_AnimLogo.svg" />
         </li>
       </ul>
-      <h1 class="holding-page-title">SOPHIA IS LOADING...</h1>
     </div>
     <div class="holding-page-footer">
       <p class="holding-page-copyright">
