--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
     </title>
     <meta
       name="Sophia Spanos McGill | Illustration and Concept Art"
-      content="The art of Sophia Spanos McGill—a Vancouver-based aspiring illustrator and concept artist with work focussing on the development of story-driven projects."
+      content="The art of Sophia Spanos McGill, a Vancouver-based aspiring illustrator and concept artist with work focussing on the development of story-driven projects."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
